# ocr_solve_math

./: Ocr_solve_math_1.ipynb  README.md  app.py  n_model.json  pyproject.toml
